[ios] Added visual disabled state to pwd search

Also Added some missing eg tests.

Bug: 879569
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I99084b2fc3d32797bcb4e12135b1d950d9befa1d
Reviewed-on: https://chromium-review.googlesource.com/1199363
Commit-Queue: David Jean <djean@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588467}
Former-commit-id: 45976032e2616915935a4d3a19c2a8f951de3424