ios/chrome/browser/ui/settings/cells/settings_search_item.h
@@ -28,6 +28,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // The placeholder for the search input field.
 @property(nonatomic, copy) NSString* placeholder;
 
+// Whether or not the search field is enabled.
+@property(nonatomic, assign, getter=isEnabled) BOOL enabled;
+
 @end
 
 // Cell representation for SettingsSearchItem.
