ios/chrome/browser/ui/settings/cells/settings_search_item.mm
@@ -27,6 +27,8 @@ const CGFloat kIconTintAlpha = 0.3f;
 const CGFloat kBackgroundAlpha = 0.1f;
 // Input text corner radius.
 const CGFloat kCornerRadius = 12.0f;
+// Input field disabled alpha.
+const CGFloat kDisabledAlpha = 0.6f;
 }  // namespace
 
 @interface SettingsSearchCell ()<UITextFieldDelegate>
@@ -36,12 +38,14 @@ const CGFloat kCornerRadius = 12.0f;
 
 @synthesize delegate = _delegate;
 @synthesize placeholder = _placeholder;
+@synthesize enabled = _enabled;
 
 - (instancetype)initWithType:(NSInteger)type {
   self = [super initWithType:type];
   if (self) {
     self.cellClass = [SettingsSearchCell class];
     self.accessibilityTraits |= UIAccessibilityTraitSearchField;
+    self.enabled = YES;
   }
   return self;
 }
@@ -53,6 +57,8 @@ const CGFloat kCornerRadius = 12.0f;
       base::mac::ObjCCastStrict<SettingsSearchCell>(cell);
   [super configureCell:searchCell];
   searchCell.textField.placeholder = self.placeholder;
+  searchCell.textField.enabled = self.isEnabled;
+  searchCell.textField.alpha = self.isEnabled ? 1.0f : kDisabledAlpha;
   searchCell.delegate = self.delegate;
 }
 
@@ -81,6 +87,7 @@ const CGFloat kCornerRadius = 12.0f;
     searchIconView.contentMode = UIViewContentModeCenter;
 
     _textField = [[UITextField alloc] init];
+    _textField.accessibilityIdentifier = @"SettingsSearchCellTextField";
     _textField.contentVerticalAlignment =
         UIControlContentVerticalAlignmentCenter;
     _textField.backgroundColor =
@@ -109,6 +116,15 @@ const CGFloat kCornerRadius = 12.0f;
                                         kVerticalMargin, kHorizontalMargin));
   }
   return self;
+}
+
+- (void)prepareForReuse {
+  [super prepareForReuse];
+
+  self.textField.placeholder = @"";
+  self.textField.enabled = YES;
+  self.textField.alpha = 1.0f;
+  self.delegate = nil;
 }
 
 #pragma mark - UITextFieldDelegate
